Fix overflow

--- a/food-app/src/app/components/authenticated-user-app/authenticated-user-app.component.scss
+++ b/food-app/src/app/components/authenticated-user-app/authenticated-user-app.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: $light-primary-color;
 
   app-header-bar {
