--- a/food-app/src/app/components/data-info/data-info.component.scss
+++ b/food-app/src/app/components/data-info/data-info.component.scss
@@ -21,10 +21,12 @@
     }
 
     .value {
+      width: 75%;
       color: $secondary-text-color;
       font-size: 1rem;
       font-weight: 600;
       text-align: left;
+      line-height: 150%;
     }
   }
 }
